--- a/.github/workflows/CI-CD-pipeline.yml
+++ b/.github/workflows/CI-CD-pipeline.yml
@@ -62,6 +62,12 @@ jobs:
       github.event.pull_request ||
       (github.event_name == 'workflow_dispatch' && github.event.inputs.test)
     steps:
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Run Tests With 3rd Party Service Mocking
         run: docker run ghcr.io/hackforla/homeuniteus/api:latest pytest
   test-api-nomock:
@@ -77,7 +83,9 @@ jobs:
       COGNITO_ACCESS_KEY: ${{ secrets.COGNITO_ACCESS_KEY }}
     steps:
       - name: Run Tests Without Mocking
-        run: docker run --env COGNITO_REGION --env COGNITO_ACCESS_ID --env COGNITO_ACCESS_KEY ghcr.io/hackforla/homeuniteus/api:latest "pytest --mode=release"
+        run: |
+          docker pull ghcr.io/hackforla/homeuniteus/api:latest
+          docker run --env COGNITO_REGION --env COGNITO_ACCESS_ID --env COGNITO_ACCESS_KEY ghcr.io/hackforla/homeuniteus/api:latest "pytest --mode=release"
   test-app-mock:
     runs-on: ubuntu-latest
     needs: [build-app, build-api]
