--- a/.github/workflows/CI-CD-pipeline.yml
+++ b/.github/workflows/CI-CD-pipeline.yml
@@ -82,10 +82,14 @@ jobs:
       COGNITO_ACCESS_ID: ${{ secrets.COGNITO_ACCESS_ID }}
       COGNITO_ACCESS_KEY: ${{ secrets.COGNITO_ACCESS_KEY }}
     steps:
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Run Tests Without Mocking
-        run: |
-          docker pull ghcr.io/hackforla/homeuniteus/api:latest
-          docker run --env COGNITO_REGION --env COGNITO_ACCESS_ID --env COGNITO_ACCESS_KEY ghcr.io/hackforla/homeuniteus/api:latest "pytest --mode=release"
+        run: docker run --env COGNITO_REGION --env COGNITO_ACCESS_ID --env COGNITO_ACCESS_KEY ghcr.io/hackforla/homeuniteus/api:latest "pytest --mode=release"
   test-app-mock:
     runs-on: ubuntu-latest
     needs: [build-app, build-api]
@@ -99,6 +103,12 @@ jobs:
         env:
           VITE_HUU_API_BASE_URL: http://127.0.0.1:8080/api
     steps:
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Run Tests With Backend Mocking
         run: docker run --env CYPRESS_BASE_URL --env CYPRESS_USE_MOCK app:latest-test "npx cypress run"
         env:
@@ -122,6 +132,12 @@ jobs:
         env:
           VITE_HUU_API_BASE_URL: http://backend:8080/api
     steps:
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
       - name: Add Test User
         run: |
           curl http://backend:8080/api/auth/signup/host -H "accept: application/json" -H "Content-Type: application/json" -d "{\"email\": \"nottarealemail@gmail.com\", \"password\": \"alskdf454#Adfa\"}"
