Fix confirm code so we can use it in CI/CD to sign up test users

--- a/api/openapi_server/openapi/paths/auth/authConfirm.yaml
+++ b/api/openapi_server/openapi/paths/auth/authConfirm.yaml
@@ -1,6 +1,20 @@
-get:
+post:
   description: Confirm or deny verification of users email
-  operationId: confirm_signup
+  operationId: confirm_sign_up
+  requestBody:
+    content:
+      application/json:
+        schema:
+          type: object
+          properties:
+            email:
+              type: string
+              format: email
+            code:
+              type: string
+          required:
+            - email
+            - code
   responses:
     "200":
       content:
