Make sign out a protected route

--- a/api/openapi_server/openapi/paths/auth/authSignout.yaml
+++ b/api/openapi_server/openapi/paths/auth/authSignout.yaml
@@ -11,3 +11,5 @@ post:
   tags:
     - auth
   x-openapi-router-controller: openapi_server.controllers.auth_controller
+  security:
+    - jwt: ["secret"]
