--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -72,6 +72,7 @@ markupsafe==2.1.3
     #   werkzeug
 marshmallow==3.20.1
     # via homeuniteus-api (pyproject.toml)
+marshmallow_sqlalchemy==0.30.0
 openapi-schema-validator==0.6.0
     # via openapi-spec-validator
 openapi-spec-validator==0.6.0
