Introduce AWS Cognito Authentication Mocking & Test Cognito User Pools (#641)
This PR fixes the DevelopmentHUUConfig by introducing AWS Cognito authentication mocking. With these changes we can run the API without AWS Cognito credentials.

I've also introduced a AWSTemporaryUserpool which creates temporary, development-only AWS Cognito user pools in order to completely isolate development and test user data from production user data. With this change we can now write test cases that interact directly with AWS Cognito without worrying about potentially deleting or polluting real user data.

Detailed Changes:
* Add moto[cognito-idp] as a development dependency
* Add test users at start. Will need to refactor duplicated code.
* Add backend authentication test cases that work with and without mocking
* Remove obsolete test cases. The app now always supports boto client
* Consolidate authentication tests into single suite & fix __main__ typo
* Migrate backend authentication tests from unittest to pytest
* Remove Flask-Testing now that we have pytest test fixtures
* Enable release mode API tests on GH test Action
* Set random secret key for release tests
* Remove JWT requirement from session endpoint
* Auto-confirm new users while mocking AWS
* Refactor signup methods to use same code
* Update frontend e2e test to use the test users when mocking is enabled

--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -123,11 +123,10 @@ dev = [
   # pytest-randomly will cause tests to be run in random order.
   "pytest-randomly==3.12.0",
 
-  # Flask-Testing is included to help test Flask specific parts of this project.
-  "Flask-Testing==0.8.1",
-
   # pip-tools provides the tools pip-compile and pip-sync to help manage requirements files
   "pip-tools",
+
+  "moto[cognitoidp]",
 ]
 
 # This defines the "prod" extra dependency group.
