--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -97,6 +97,7 @@ dependencies = [
     # marshmallow is used to define database model schema, to enable easy serialization
     # of models to and from json. 
     "marshmallow==3.20.1",
+    "marshmallow_sqlalchemy==0.30.0",
     "openapi-spec-validator==0.6.0",
 ]
 
