--- a/api/requirements.txt
+++ b/api/requirements.txt
@@ -28,8 +28,12 @@ click==8.1.7
     #   flask
 clickclick==20.10.2
     # via connexion
+colorama==0.4.6
+    # via click
 connexion==2.14.2
-    # via homeuniteus-api (pyproject.toml)
+    # via
+    #   connexion
+    #   homeuniteus-api (pyproject.toml)
 flask==2.2.5
     # via connexion
 greenlet==2.0.2
@@ -71,8 +75,11 @@ markupsafe==2.1.3
     #   mako
     #   werkzeug
 marshmallow==3.20.1
+    # via
+    #   homeuniteus-api (pyproject.toml)
+    #   marshmallow-sqlalchemy
+marshmallow-sqlalchemy==0.30.0
     # via homeuniteus-api (pyproject.toml)
-marshmallow_sqlalchemy==0.30.0
 openapi-schema-validator==0.6.0
     # via openapi-spec-validator
 openapi-spec-validator==0.6.0
@@ -81,6 +88,7 @@ packaging==23.1
     # via
     #   connexion
     #   marshmallow
+    #   marshmallow-sqlalchemy
     #   prance
 pathable==0.4.3
     # via jsonschema-spec
@@ -125,7 +133,9 @@ six==1.16.0
     #   python-dateutil
     #   rfc3339-validator
 sqlalchemy==2.0.20
-    # via alembic
+    # via
+    #   alembic
+    #   marshmallow-sqlalchemy
 swagger-ui-bundle==0.0.9
     # via connexion
 typing-extensions==4.7.1
