--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -46,11 +46,11 @@ jobs:
         shell: bash
         working-directory: ./app
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4
       - name: Use Node.js LTS
-        uses: actions/setup-node@v3
+        uses: actions/setup-node@v4
         with:
-          node-version: "lts/*"
+          node-version: 20
           cache: "npm"
           cache-dependency-path: app/package-lock.json
       - name: Run npm CI
