--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -63,4 +63,4 @@ jobs:
           install: false
           start: npm run dev
           working-directory: ./app
-          wait-on: http://localhost:4040
+          wait-on: "http://[::1]:4040/"
