--- a/.github/workflows/run-tests.yml
+++ b/.github/workflows/run-tests.yml
@@ -47,7 +47,7 @@ jobs:
         working-directory: ./app
     steps:
       - uses: actions/checkout@v4
-      - name: Use Node.js LTS
+      - name: Use Node.js 20
         uses: actions/setup-node@v4
         with:
           node-version: 20
