--- a/api/pyproject.toml
+++ b/api/pyproject.toml
@@ -128,6 +128,8 @@ dev = [
   "pip-tools",
 
   "moto[cognitoidp]",
+
+  "pytest-alembic==0.11.0",
 ]
 
 # This defines the "prod" extra dependency group.
