Fix host controller by refactoring to use new user_repo, and by adding a UserSchema. The updated endpoint now requires email and user_name. Fix test cases by updating the app fixture to use an upgraded database, allow the DataAccessLayer to be configured by the test project, and remove the Host model class

--- a/api/openapi_server/openapi/paths/host.yaml
+++ b/api/openapi_server/openapi/paths/host.yaml
@@ -9,7 +9,7 @@ get:
       content:
         application/json:
           schema:
-            $ref: "../schemas/_index.yaml#/HostResponse"
+            $ref: "../schemas/_index.yaml#/UserSchema"
   x-openapi-router-controller: openapi_server.controllers.host_controller
 post:
   summary: Create a host
@@ -20,17 +20,12 @@ post:
     content:
       application/json:
         schema:
-          type: object
-          properties:
-            name:
-              type: string
-          required:
-            - name
+          $ref: '../schemas/_index.yaml#/UserSchema'
   responses:
     "200":
       description: Success created host
       content:
         application/json:
           schema:
-            $ref: "../schemas/_index.yaml#/HostResponse"
+            $ref: "../schemas/_index.yaml#/UserSchema"
   x-openapi-router-controller: openapi_server.controllers.host_controller
