Rename user model names to use camel casing to match the frontend requests.
Also, Update UserSchema to allow extra fields. This will allow us to parse User models directly from request JSON.

--- a/api/openapi_server/openapi/schemas/_index.yaml
+++ b/api/openapi_server/openapi/schemas/_index.yaml
@@ -62,15 +62,15 @@ UserSchema:
     email:
       type: string 
       format: email
-    first_name:
+    firstName:
       type: string
-    middle_name:
+    middleName:
       type: string
-    last_name:
+    lastName:
       type: string
     role: 
       $ref: '#/RoleSchema'
   required:
     - email
-    - first_name 
-    - last_name
+    - firstName 
+    - lastName
