1. Update Host & Coordinator endpoints to require first and last name. 2. Add test case to verify all fields are required during signup. 3. Update SignUp e2e test to add a no mocking version. This tests against the acutal running backend.

--- a/api/openapi_server/openapi/paths/auth/authSignUpCoordinator.yaml
+++ b/api/openapi_server/openapi/paths/auth/authSignUpCoordinator.yaml
@@ -5,15 +5,7 @@ post:
     content:
       application/json:
         schema:
-          type: object
-          properties:
-            email:
-              type: string
-            password:
-              type: string
-          required:
-            - email
-            - password
+          $ref: '../../schemas/_index.yaml#/UserSignupSchema'
   responses:
     "200":
       content:
