--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "name": "home-unite-us",
   "private": true,
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -44,13 +45,6 @@
     "@babel/core": "^7.18.6",
     "@faker-js/faker": "^8.1.0",
     "@rtk-query/codegen-openapi": "^1.0.0-alpha.1",
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-interactions": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
-    "@storybook/builder-vite": "^0.1.38",
-    "@storybook/react": "^7.4.6",
-    "@storybook/testing-library": "^0.0.13",
     "@testing-library/cypress": "^10.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -73,7 +67,7 @@
     "msw": "^2.2.3",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
-    "vite": "^3.2.7",
+    "vite": "^5.2.7",
     "vitest": "^0.31.1",
     "whatwg-fetch": "^3.6.2"
   }
