--- a/app/package.json
+++ b/app/package.json
@@ -44,13 +44,6 @@
     "@babel/core": "^7.18.6",
     "@faker-js/faker": "^8.1.0",
     "@rtk-query/codegen-openapi": "^1.0.0-alpha.1",
-    "@storybook/addon-actions": "^6.5.9",
-    "@storybook/addon-essentials": "^6.5.9",
-    "@storybook/addon-interactions": "^6.5.9",
-    "@storybook/addon-links": "^6.5.9",
-    "@storybook/builder-vite": "^0.1.38",
-    "@storybook/react": "^7.4.6",
-    "@storybook/testing-library": "^0.0.13",
     "@testing-library/cypress": "^10.0.1",
     "@testing-library/jest-dom": "^5.16.4",
     "@testing-library/react": "^13.3.0",
@@ -71,10 +64,11 @@
     "jsdom": "^20.0.0",
     "lint-staged": "^13.0.3",
     "msw": "^2.2.3",
+    "node-fetch": "^3.3.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "vite": "^3.2.7",
-    "vitest": "^0.31.1",
+    "vitest": "^0.31.4",
     "whatwg-fetch": "^3.6.2"
   }
 }
