--- a/app/package.json
+++ b/app/package.json
@@ -2,6 +2,7 @@
   "name": "home-unite-us",
   "private": true,
   "version": "1.0.0",
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
@@ -52,7 +53,7 @@
     "@types/react-dom": "^18.0.5",
     "@typescript-eslint/eslint-plugin": "^5.30.3",
     "@typescript-eslint/parser": "^5.30.3",
-    "@vitejs/plugin-react": "^2.2.0",
+    "@vitejs/plugin-react": "^4.2.1",
     "babel-loader": "^8.2.5",
     "cypress": "^13.2.0",
     "eslint": "^8.19.0",
@@ -67,8 +68,8 @@
     "node-fetch": "^3.3.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
-    "vite": "^3.2.7",
-    "vitest": "^0.31.4",
+    "vite": "^5.2.8",
+    "vitest": "^1.4.0",
     "whatwg-fetch": "^3.6.2"
   }
 }
