--- a/app/package.json
+++ b/app/package.json
@@ -65,11 +65,9 @@
     "jsdom": "^20.0.0",
     "lint-staged": "^13.0.3",
     "msw": "^2.2.3",
-    "node-fetch": "^3.3.2",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4",
     "vite": "^5.2.8",
-    "vitest": "^1.4.0",
-    "whatwg-fetch": "^3.6.2"
+    "vitest": "^1.4.0"
   }
 }
