655 Add User Roles and Basic User Data to Db (#668)
This PR introduces user roles (Guest, Host, Coordinator, and Admin) and user first/middle/last name. The role and first name are mandatory fields, and middle/last names are optional. Users now need to provide their first name when signing up, and the basic user data will be available from the frontend app after sign-in.

The following detailed changes were made:
* Add user types. Define types during migration script. Remove old Host table and replace with the host user type.
* Add pytest-alembic to allow migration tests, and to provide fixtures that upgrade our in-memory test database
* Update test infrastructure to properly alembic migrate the test database as part of the test project setup. Also, add a test suite to test the migration.
* Add user repo. Simplify user role to 1:1 relationship. Add user schema tests, and replace old host schema tests. Add user schema validation to enforce valid role.
* Fix host controller by refactoring to use new user_repo, and by adding a UserSchema. The updated endpoint now requires email and user_name. Fix test cases by updating the app fixture to use an upgraded database, allow the DataAccessLayer to be configured by the test project, and remove the Host model class
* Update Host & Coordinator endpoints to require first name.
* Update SignUp e2e test to add a no mocking version. This tests against the actual running backend.
* Update data model diagram and add instructions on how to update the data model.
* Update user endpoints to store first/last name from request, and return it in the user data response.
* Remove unnecessary create host endpoint. This is now replaced by signupHost.
* Display user initials on settings menu avatar
* Auto-increment the API database version whenever a new migration script is added. Our instructions were missing the increment step, but it is more reliable to simply auto-increment. The downside is that we'll need to bundle our migrat

--- a/api/openapi_server/openapi/paths/host.yaml
+++ b/api/openapi_server/openapi/paths/host.yaml
@@ -9,28 +9,5 @@ get:
       content:
         application/json:
           schema:
-            $ref: "../schemas/_index.yaml#/HostResponse"
-  x-openapi-router-controller: openapi_server.controllers.host_controller
-post:
-  summary: Create a host
-  tags:
-    - host
-  operationId: create_host
-  requestBody:
-    content:
-      application/json:
-        schema:
-          type: object
-          properties:
-            name:
-              type: string
-          required:
-            - name
-  responses:
-    "200":
-      description: Success created host
-      content:
-        application/json:
-          schema:
-            $ref: "../schemas/_index.yaml#/HostResponse"
+            $ref: "../schemas/_index.yaml#/UserSchema"
   x-openapi-router-controller: openapi_server.controllers.host_controller
