Add initial e2e workflow with an API healthcheck and required mods to the dockerfiles.

--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,7 +1,7 @@
 # TODO: Run the openapi_server with nginx as reverse proxy and gunicorn as WSGI server
 FROM python:3.10-alpine
 
-RUN apk update && apk add build-base
+RUN apk update && apk add build-base && apk add curl
 
 RUN mkdir -p /opt/HomeUniteUs/api
 WORKDIR /opt/HomeUniteUs/api
@@ -10,7 +10,16 @@ COPY . .
 
 RUN python -m pip install --upgrade pip
 RUN python -m pip install --no-cache-dir -r requirements-dev.txt
+# Create an up-to-date database within the API container
+# To-Do: Separate the database to its own container
+RUN alembic upgrade head
 
 EXPOSE 8080
-ENTRYPOINT ["python"]
-CMD ["-m", "openapi_server"]
+ENTRYPOINT ["/bin/sh", "-c"]
+# We can decrease the number of health checks when 
+# v25.0 docker engine is release. This engine will
+# provide a --start-interval option that allows a custom
+# startup health check interval
+HEALTHCHECK --interval=5s --timeout=5s --retries=3 \
+    CMD curl --fail http://${HOST:-localhost}:${PORT:-8080}/api/health || exit 1
+CMD ["python -m openapi_server"]
