--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -45,32 +45,25 @@ jobs:
   test-api-mock:
     runs-on: ubuntu-latest
     needs: [build-api]
+    container:
+      image: ghcr.io/hackforla/homeuniteus/api:latest
+      options: --entrypoint /bin/bash --no-healthcheck
     steps:
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Run Tests With 3rd Party Service Mocking
-        run: docker run --rm --no-healthcheck ghcr.io/hackforla/homeuniteus/api:latest pytest
+      - name: Run Tests With Backend Mocking
+        run: pytest
   test-api-nomock:
     runs-on: ubuntu-latest
-    needs: [build-api]
-    env:
-      COGNITO_REGION: ${{ secrets.COGNITO_REGION }}
-      COGNITO_ACCESS_ID: ${{ secrets.COGNITO_ACCESS_ID }}
-      COGNITO_ACCESS_KEY: ${{ secrets.COGNITO_ACCESS_KEY }}
+    needs: [build-api]     
+    container:
+      image: ghcr.io/hackforla/homeuniteus/api:latest
+      options: --entrypoint /bin/bash --no-healthcheck
+      env:
+        COGNITO_REGION: ${{ secrets.COGNITO_REGION }}
+        COGNITO_ACCESS_ID: ${{ secrets.COGNITO_ACCESS_ID }}
+        COGNITO_ACCESS_KEY: ${{ secrets.COGNITO_ACCESS_KEY }}
     steps:
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-      - name: Run Tests Without Mocking
-        run: |
-          docker run --rm -e COGNITO_REGION -e COGNITO_ACCESS_ID -e COGNITO_ACCESS_KEY ghcr.io/hackforla/homeuniteus/api:latest "pytest --mode=release"
+      - name: Run Tests With Backend Mocking
+        run: pytest --mode=release
   test-app-mock:
     runs-on: ubuntu-latest
     needs: [build-app, build-api]
