--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -51,7 +51,7 @@ jobs:
     steps:
       - name: Run Tests With Backend Mocking
         run: pytest
-        working-directory: /api
+        working-directory: /opt/HomeUniteUs/api
   test-api-nomock:
     runs-on: ubuntu-latest
     needs: [build-api]     
@@ -65,7 +65,7 @@ jobs:
     steps:
       - name: Run Tests With Backend Mocking
         run: pytest --mode=release
-        working-directory: /api
+        working-directory: /opt/HomeUniteUs/api
   test-app-mock:
     runs-on: ubuntu-latest
     needs: [build-app, build-api]
