--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -42,7 +42,7 @@ jobs:
           IMAGE_NAME=ghcr.io/hackforla/homeuniteus/app:latest
           docker build --build-arg VITE_HUU_API_BASE_URL=http://127.0.0.1:8080/api --target production --tag $IMAGE_NAME ./app
           docker push $IMAGE_NAME
-  test-api-mock:
+  test-api-mock-aws:
     runs-on: ubuntu-latest
     needs: [build-api]
     container:
@@ -52,7 +52,7 @@ jobs:
       - name: Run Tests With Backend Mocking
         run: pytest
         working-directory: /opt/HomeUniteUs/api
-  test-api-nomock:
+  test-api-real-aws:
     runs-on: ubuntu-latest
     needs: [build-api]     
     container:
@@ -66,7 +66,7 @@ jobs:
       - name: Run Tests With Backend Mocking
         run: pytest --mode=release
         working-directory: /opt/HomeUniteUs/api
-  test-app-mock:
+  test-app-mock-backend:
     runs-on: ubuntu-latest
     needs: [build-app, build-api]
     services:
@@ -82,10 +82,9 @@ jobs:
           CYPRESS_USE_MOCK: true
     steps:
       - name: Run Tests With Backend Mocking
-        run: |
-          cd /app
-          npx cypress run
-  test-app-nomock:
+        run: npm run cypress:run:mock
+        working-directory: /app
+  test-app-real-backend:
     runs-on: ubuntu-latest
     needs: [build-app, build-api]
     services:
@@ -108,5 +107,5 @@ jobs:
           CYPRESS_REAL_PASSWORD: Test!123
     steps:
       - name: Test using a real backend
-        run: npx cypress run
+        run: npm run cypress:run:nomock
         working-directory: /app
